# sirius_model_viewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
dependencies/include/sirius_logger/: console_sink.h  file_sink.h  formatter.h  log.h  log_level.h  logger.h  sink.h  timestamp.h
include/buffers/: buffer_layout.h  index_buffer.h  vertex_array.h  vertex_buffer.h
include/common/: sr_types.h
include/components/: transform.h
include/controllers/: camera_controller.h
include/core/: application.h  input.h  window.h
include/model/: mesh.h  model.h
include/renderer/: camera.h  material.h  renderer.h  shader.h  texture.h
include/test_models/: test_cube.h
resources/models/mobile_ak47/: license.txt  scene.gltf
shaders/: fragment.frag  vertex.vert
shaders/test_cube/: fragment.frag  vertex.vert
src/: main.cpp
src/buffers/: index_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp
src/components/: transform.cpp
src/controllers/: camera_controller.cpp
src/core/: application.cpp  input.cpp  window.cpp
src/model/: mesh.cpp  model.cpp
src/renderer/: camera.cpp  material.cpp  renderer.cpp  shader.cpp  texture.cpp
